# show-sherpa

./: .gitignore  README.md  package-lock.json  package.json
backend/: cli.py  env.example  geo_lookup.py  main.py  pyproject.toml  spotify_client.py  spotify_state.py  ticketmaster_geo.py
backend/agent/: __init__.py  showsherpa_graph.py
backend/tests/: test_spotify_flow.py  test_ticketmaster_proxy.py
docs/: assignment.txt  checklist.md  spotify.txt  ticketmaster.txt
frontend/: env.example  index.html  package.json
frontend/src/: main.jsx
frontend/src/api/: apiClient.js  integrations.js
frontend/src/components/chat/: ChatInput.jsx  ConcertCard.jsx  ConversationItem.jsx  MessageBubble.jsx  Sidebar.jsx  WelcomeScreen.jsx
frontend/src/components/onboarding/: SpotifyConnect.jsx
frontend/src/lib/: spotifyAuth.js  spotifyRuntimeConfig.js
frontend/src/pages/: Chat.jsx  Layout.jsx  Settings.jsx  SpotifyCallback.jsx  index.jsx
src/components/chat/: LocationSelector.jsx
src/pages/: Chat.jsx
