[project]
name = "showsherpa-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.6",
  "uvicorn[standard]==0.34.0",
  "langchain>=0.3.0",
  "langgraph>=0.2.0",
  "langchain-groq>=0.2.0",
  "langchain-google-genai>=2.0.0",
]

[dependency-groups]
dev = [
  "pytest==8.3.4",
  "httpx==0.27.2",
]


